--- a/deb/folder/DEBIAN/control
+++ b/deb/folder/DEBIAN/control
@@ -1,6 +1,6 @@
-Package: backon
+Package: com.myrepospace.pookjw.backon
 Name: BackOn
-Version: 53
+Version: 57
 Architecture: iphoneos-arm
 Description: Backup the jailbroken iOS device.
 Section: Utilities
