--- a/deb/folder/DEBIAN/control
+++ b/deb/folder/DEBIAN/control
@@ -1,7 +1,7 @@
 Package: com.myrepospace.pookjw.backon
 Name: BackOn
-Version: 72
+Version: 73
 Architecture: iphoneos-arm
-Description: Backup the jailbroken iOS device.
+Description: Backup jailbroken iOS device.
 Section: Utilities
 Depends: zip, unzip, coreutils, coreutils-bin, apt7, rsync, system-cmds, wget
