--- a/deb-beta/folder/DEBIAN/control
+++ b/deb-beta/folder/DEBIAN/control
@@ -4,4 +4,4 @@ Version: 126
 Architecture: iphoneos-arm
 Description: Backup jailbroken iOS device.
 Section: Utilities
-Depends: zip, unzip, coreutils, coreutils-bin, apt7, rsync, system-cmds, wget, adv-cmds
+Depends: zip, unzip, coreutils, coreutils-bin, apt7, rsync, system-cmds, shell-cmds, wget, adv-cmds
